# FlyEase

./: .env  .gitignore  README.md  destination_mapping.pkl  destination_popularity.pkl  docker-compose.yaml  recommendation_customer_booking.pkl
backend/: .gitignore  requirements.txt
backend/aircraft/: package-lock.json  package.json
backend/booking/: .env.example  CODE_OF_CONDUCT.md  Dockerfile-prod  package-lock.json  package.json  tsconfig.json
backend/chatbot/: .env.example  .gitignore  Dockerfile-prod  compose.yml  langgraph.json  pyproject.toml  requirement.txt
backend/chatbot/app/: graph.py  service.py
backend/chatbot/app/models/: state.py
backend/chatbot/app/nodes/: context_retriever.py  query_processor.py  response_generator.py  search_node.py
backend/chatbot/app/tools/: config.py  llm.py  search.py  vector_db.py
backend/core/: settings.py  urls.py
backend/flight/: .env  .env.example  docker-compose.yaml  package-lock.json  package.json  tsconfig.json  vitest.config.ts
backend/flights/: api.py  models.py  schemaPayload.py  urls.py
backend/recommend/: .env.example  .gitignore  Dockerfile-prod  destination_mapping.pkl  destination_popularity.pkl  model.py  recommendation_api.py  recommendation_customer_booking.pkl  recommendation_service.py  (+3 more)
frontend/: .gitignore  Dockerfile-prod  axiosConfig.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
recommended/: .env  airports-code@public.csv  alembic.ini  destination_popularity.pkl  model.py  recommendation_api.py  recommendation_customer_booking.pkl
(+129 files in other folders)
